# zero2prod

./: .env  Cargo.toml  configuration.yaml  docker-compose.yml
.cargo/: config.toml
migrations/: 20230522114134_create_subscriptions_table.down.sql  20230522114134_create_subscriptions_table.up.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
